[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
clap = { version = "4.5.4", features = ["derive"] } # 命令行解析
colored = "2" # 命令行终端多彩显示
jsonxf = "1.1" # JSON pretty print 格式化
mime = "0.3" # 处理 mime 类型
reqwest = { version = "0.12.2", default-features = false, features = [
  "json",
  "rustls-tls",
] } # HTTP客户端
tokio = { version = "1", features = ["full"] } #异步处理库
syntect = "5.2.0"
